# mewgenics-mod-editor

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
public/: passive_meta.json
src/: i18n.ts  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gon.rs  lib.rs  main.rs
src/assets/: GameLocales.json
src/components/: AppVersion.tsx  Layout.tsx
src/context/: ToastContext.tsx
src/features/home/: HomePage.tsx
src/features/modEditor/: ModEditorPage.tsx  modEditorStore.ts  registry.ts  types.ts  utils.ts
src/features/modEditor/components/: PassiveShared.tsx
src/features/modEditor/sections/: characters.section.tsx  classes.section.tsx  difficulty.section.tsx  furniture.section.tsx  itemSetBonuses.section.tsx  mutationsBatch.section.tsx  npcFavor.section.tsx
src/locales/: en.json  zh.json
src/store/: appStore.ts
src/types/: lz4js.d.ts
