[package]
name = "mewgenics-mod-editor"
version = "1.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mewgenics_mod_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2"
walkdir = "2"

csv = "1.3"

[profile.release]
opt-level = 'z'     # 告诉编译器：比起运行速度，我更想要更小的体积
lto = true          # 开启全程序链接优化 (Link Time Optimization)，消除没用到的代码
codegen-units = 1   # 减少并行编译单元，虽然编译变慢，但能生成更小的代码
strip = true        # 彻底剥离所有的调试符号信息（符号表、行号等）


